baml_language/crates/baml_tests/snapshots/parser_strings/baml_tests__parser_strings__02_parser__nested_quotes.snap
---
source: target/debug/build/baml_tests-ddc6647912a5d7c4/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "NestedQuotes"
    L_BRACE "{"
    FIELD
      WORD "single_in_double"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "He said 'hello'"
            QUOTE """
            WORD "He"
            WORD "said"
            ERROR_TOKEN "'"
            WORD "hello"
            ERROR_TOKEN "'"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "double_in_single"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS "("
          L_PAREN "("
    ERROR_TOKEN "'"
    FIELD
      WORD "She"
      TYPE_EXPR "said"
        WORD "said"
    QUOTE """
    FIELD
      WORD "hello"
      TYPE_EXPR
        STRING_LITERAL "')
  escaped_in_escaped string @alias("
          QUOTE """
          ERROR_TOKEN "'"
          R_PAREN ")"
          WORD "escaped_in_escaped"
          WORD "string"
          AT "@"
          WORD "alias"
          L_PAREN "("
          QUOTE """
    FIELD
      WORD "The"
      TYPE_EXPR
    ERROR_TOKEN "\"
    QUOTE """
    FIELD
      WORD "quote"
      TYPE_EXPR
    ERROR_TOKEN "\"
    QUOTE """
    FIELD
      WORD "is"
      TYPE_EXPR "here"
        WORD "here"
    QUOTE """
    R_PAREN ")"
    FIELD
      WORD "complex_nesting"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "It's \"
            QUOTE """
            WORD "It"
            ERROR_TOKEN "'"
            WORD "s"
            ERROR_TOKEN "\"
            QUOTE """
    FIELD
      WORD "really"
      TYPE_EXPR
    ERROR_TOKEN "\"
    QUOTE """
    ERROR_TOKEN "'"
    FIELD
      WORD "complex"
      TYPE_EXPR
    ERROR_TOKEN "'"
    QUOTE """
    R_PAREN ")"
    FIELD
      WORD "json_like"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "{\"
            QUOTE """
            L_BRACE "{"
            ERROR_TOKEN "\"
            QUOTE """
    FIELD
      WORD "key"
      TYPE_EXPR
    ERROR_TOKEN "\"
    QUOTE """
    COLON ":"
    ERROR_TOKEN "\"
    QUOTE """
    FIELD
      WORD "value"
      TYPE_EXPR
    ERROR_TOKEN "\"
    QUOTE """
    R_BRACE "}"
  QUOTE """
  R_PAREN ")"
  R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "FormatMessage"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "name"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "client GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL #"
    Generate a message for "{{ name }}"
    Include quotes like: "Welcome, '{{ name }}'!"
  "#
          HASH "#"
          QUOTE """
          WORD "Generate"
          WORD "a"
          WORD "message"
          KW_FOR "for"
          QUOTE """
          L_BRACE "{"
          L_BRACE "{"
          WORD "name"
          R_BRACE "}"
          R_BRACE "}"
          QUOTE """
          WORD "Include"
          WORD "quotes"
          WORD "like"
          COLON ":"
          QUOTE """
          WORD "Welcome"
          COMMA ","
          ERROR_TOKEN "'"
          L_BRACE "{"
          L_BRACE "{"
          WORD "name"
          R_BRACE "}"
          R_BRACE "}"
          ERROR_TOKEN "'"
          NOT "!"
          QUOTE """
          QUOTE """
          HASH "#"
      R_BRACE "}"

=== ERRORS ===
Error: Expected attribute argument, found Error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected attribute argument, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected RParen, found Error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected RParen, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:4:34 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                  ┬  
   │                                  ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:4:44 ]
   │
 4 │   double_in_single string @alias('She said "hello"')
   │                                            ┬  
   │                                            ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected type, found Error
   ╭─[ nested_quotes.baml:5:41 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                         ┬  
   │                                         ╰── Expected type, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:5:41 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                         ┬  
   │                                         ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:5:42 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                          ┬  
   │                                          ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected type, found Error
   ╭─[ nested_quotes.baml:5:48 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                ┬  
   │                                                ╰── Expected type, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:5:48 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                ┬  
   │                                                ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:5:49 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                 ┬  
   │                                                 ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:5:58 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                          ┬  
   │                                                          ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found RParen
   ╭─[ nested_quotes.baml:5:59 ]
   │
 5 │   escaped_in_escaped string @alias("The \"quote\" is here")
   │                                                           ┬  
   │                                                           ╰── Expected Unexpected token in class body, found RParen
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected RParen, found Word
   ╭─[ nested_quotes.baml:6:47 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                               ───┬──  
   │                                                  ╰──── Expected RParen, found Word
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected type, found Error
   ╭─[ nested_quotes.baml:6:53 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                                     ┬  
   │                                                     ╰── Expected type, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:6:53 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                                     ┬  
   │                                                     ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:6:54 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                                      ┬  
   │                                                      ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:6:56 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                                        ┬  
   │                                                        ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected type, found Error
   ╭─[ nested_quotes.baml:6:64 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                                                ┬  
   │                                                                ╰── Expected type, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:6:64 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                                                ┬  
   │                                                                ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:6:65 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                                                 ┬  
   │                                                                 ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found RParen
   ╭─[ nested_quotes.baml:6:66 ]
   │
 6 │   complex_nesting string @description("It's \"really\" 'complex'")
   │                                                                  ┬  
   │                                                                  ╰── Expected Unexpected token in class body, found RParen
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected RParen, found Word
   ╭─[ nested_quotes.baml:7:31 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                               ─┬─  
   │                                ╰─── Expected RParen, found Word
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected type, found Error
   ╭─[ nested_quotes.baml:7:34 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                  ┬  
   │                                  ╰── Expected type, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:7:34 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                  ┬  
   │                                  ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:7:35 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                   ┬  
   │                                   ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Colon
   ╭─[ nested_quotes.baml:7:36 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                    ┬  
   │                                    ╰── Expected Unexpected token in class body, found Colon
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:7:38 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                      ┬  
   │                                      ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:7:39 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                       ┬  
   │                                       ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected type, found Error
   ╭─[ nested_quotes.baml:7:45 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                             ┬  
   │                                             ╰── Expected type, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Error
   ╭─[ nested_quotes.baml:7:45 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                             ┬  
   │                                             ╰── Expected Unexpected token in class body, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unexpected token in class body, found Quote
   ╭─[ nested_quotes.baml:7:46 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                              ┬  
   │                                              ╰── Expected Unexpected token in class body, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found Quote
   ╭─[ nested_quotes.baml:7:48 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                                ┬  
   │                                                ╰── Expected top-level declaration, found Quote
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found RParen
   ╭─[ nested_quotes.baml:7:49 ]
   │
 7 │   json_like string @alias("{\"key\": \"value\"}")
   │                                                 ┬  
   │                                                 ╰── Expected top-level declaration, found RParen
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found RBrace
   ╭─[ nested_quotes.baml:8:1 ]
   │
 8 │ }
   │ ┬  
   │ ╰── Expected top-level declaration, found RBrace
   │ 
   │ Note: Error code: E0010
───╯
